# nextjs-webgl-wasm

./: .eslintrc.json  LICENSE.md  README.md  package-lock.json  package.json  tailwind.config.js
src/components/: Canvas.tsx  FrameRate.tsx
src/context/: FrameRate.tsx  WASM.tsx
src/hooks/: useAnimationFrame.ts  useMountEffectOnce.ts  useWindowDimension.ts
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
wasm/: .gitignore  Cargo.toml  README.MD
wasm/src/: lib.rs
