[package]
name = "wasm"
description = "web-assembly module"
license-file = "../LICENSE.md"
repository = "https://github.com/grahamcracker1234/nextjs-webgl-wasm/"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
"wasm-bindgen" = "0.2.83"
web-sys = { version = "0.3.61", features = ["WebGl2RenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer"] }
